Implement getting list of films which are not in favorite collection
