# films-app/app/Models/Film.php
@@ -3,6 +3,8 @@
 namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Query\Builder;
+use Illuminate\Database\Query\JoinClause;
 
 /**
  * @property int $id
@@ -13,6 +15,7 @@ use Illuminate\Database\Eloquent\Model;
  *
  * @method static static findOrFail($id, $columns = ['*'])
  * @method static static make(array $attributes = [])
+ * @method static Builder select($columns = ['*'])
  */
 class Film extends Model
 {
@@ -23,4 +26,19 @@ class Film extends Model
         'description',
         'release_year',
     ];
+
+    /**
+     * @param int $userId
+     * @return Builder
+     */
+    public static function getNonFavoriteQuery(int $userId)
+    {
+        return Film::select(['films.*'])
+            ->leftJoin('favorites', function (JoinClause $join) use ($userId) {
+                $join->on('films.id', '=', 'favorites.film_id')
+                    ->where('favorites.user_id', $userId);
+            })
+            ->whereNull('favorites.id')
+            ->orderBy('id', 'asc');
+    }
 }
